apps/base/ollama/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ollama-virtualservice
  namespace: ollama
spec:
  gateways:
    - istio-ingress/wildcard-gateway
  hosts:
    - ollama-web.${cluster_subdomain}
  http:
    - route:
        - destination:
            host: open-webui.ollama.svc.cluster.local
            port:
              number: 80
